@@ -54,4 +54,4 @@ The wrapped function is created internally by the decorator, any positional
 arguments are forwarded to the filter function. The first argument is always
 the value already converted into a string.
 
-.. _designer documentation: designerdoc.txt
+.. _designer documentation: builtins.txt
